# work-by-roles

./: .cursorrules  .gitignore  CONTRIBUTING.md  CONTRIBUTING_EN.md  INSTALLATION.md  LICENSE  MANIFEST.in  QUICKSTART.md  QUICKSTART_EN.md  README.md  README_EN.md  ROLES_AND_SKILLS.md  ROLES_AND_SKILLS_EN.md  pyproject.toml  pytest.ini  requirements.txt  test_setup_manual.sh  workflow_engine.py
.cursor/: index.mdc
.cursor/rules/: autopilot.md
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  skill_extension.md
docs/: API.md  API_EN.md  ARCHITECTURE.md  SKILLS_LAYERED_CLASSIFICATION.md  SKILLS_LAYERED_CLASSIFICATION_EN.md  USAGE_IN_OTHER_PROJECTS.md
examples/: ecommerce_order_sop.md
skills/knowledge_distillation/: Skill.md
skills/security_assurance/: Skill.md
teams/: README.md
teams/standard-delivery/: README.md  role_schema.yaml  skill_library.yaml  workflow_schema.yaml
tests/: README.md  TEST_SUMMARY.md  __init__.py  conftest.py  test_checkpoint_manager.py  test_code_writing_tracker.py  test_document_preview_generator.py  test_immersive_workflow_display.py  test_llm_stream_handler.py  test_progress_stream.py  test_stream_writer.py  test_workflow_progress_manager.py
tests/cli/: __init__.py  test_agent_commands.py  test_basic_commands.py  test_team_commands.py  test_workflow_commands.py  test_workflow_setup_automated.py
tests/e2e/: __init__.py  test_full_workflow.py  test_multi_agent_collaboration.py  test_setup_in_new_project.py
tests/fixtures/: README.md  test_project_fixtures.py
tests/integration/: test_agent_collaboration.py  test_sop_to_team.py  (+4 more)
work_by_roles/: __init__.py  bootstrap.py  cli.py  engine.py  quick_start.py
(+129 files in other folders)
